--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "pdfjs-dist",
-  "version": "2.3.200",
+  "name": "demo",
+  "version": "1.0.0",
   "main": [
     "build/pdf.js",
     "build/pdf.worker.js"
