--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   "format": "amd",
   "repository": {
     "type": "git",
-    "url": "https://github.com/andongbai/demo.git"
+    "url": "https://github.com/andongbai/demo"
   }
 }
